--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@ bin-release/
 
 # Other files and folders
 .settings/
+ body-parts
 
-# Executables
+# Executab les
 *.swf
 *.air
 *.ipa
@@ -16,3 +17,6 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+#
+#
+# 
